minor cv update winter 2021

--- a/static/files/cv.tex
+++ b/static/files/cv.tex
@@ -30,14 +30,14 @@
 \begin{document}
 \makecvtitle
 \section{Education}
-\cventry{2019 -- 2021}{Master of Arts in Computational Social Science}{University of Chicago}{Chicago, IL}{\linebreak GPA: 3.81}{Thesis on Deep Learning and Human Memory. In Progress.}
+\cventry{2019 -- 2021}{Master of Arts in Computational Social Science}{University of Chicago}{Chicago, IL}{\linebreak GPA: 3.83}{Thesis on Deep Learning and Human Memory. In Progress.}
 \cventry{2015 -- 2019}{Bachelor of Arts in Economics and Physics}{Washington University in St. Louis}{ St. Louis, MO}{\linebreak GPA: 3.41}{Minor in the Philosophy of Science}
 
 \section{Experience}
 
-\cventry{2020}{Research Assistant}{\href{https://brainbridgelab.uchicago.edu/}{University of Chicago: Brain Bridge Lab}}{Chicago, IL.}{}{Researched the efficacy of deep learning techniques to estimate the probability that a subject will remember an image. Used these models to create a better understanding of the features of an image that are common among highly memorable images. Future work may include working with novel deep learning methods.}
+\cventry{2020 -- 2021}{Research Assistant}{\href{https://brainbridgelab.uchicago.edu/}{University of Chicago: Brain Bridge Lab}}{Chicago, IL.}{}{Researched the efficacy of deep learning techniques to estimate the probability that a subject will remember an image. Used these models to create a better understanding of the features of an image that are common among highly memorable images. Future work may include working with novel deep learning methods.}
 
-\cventry{2020}{Research Assistant}{\href{https://voices.uchicago.edu/memorylab/}{University of Chicago: Memory Lab}}{Chicago, IL.}{}{Developed an online experiment to generate pilot data for the development of a computer assisted testing program for cognitive decline. Built in JSPsych and tested on prolific and a selection of older adults through a partnership with Rush University, the experiment is designed to see if sufficient information about one's cognitive state can be extracted with a minimal amount of memory and cognitive tests in a number of domains}
+\cventry{2020 -- 2021}{Research Assistant}{\href{https://voices.uchicago.edu/memorylab/}{University of Chicago: Memory Lab}}{Chicago, IL.}{}{Developed an online experiment to generate pilot data for the development of a computer assisted testing program for cognitive decline. Built in JSPsych and tested on prolific and a selection of older adults through a partnership with Rush University, the experiment is designed to see if sufficient information about one's cognitive state can be extracted with a minimal amount of memory and cognitive tests in a number of domains}
 
 \cventry{2019}{Freelance Data Scientist}{Upwork}{ St. Louis, MO and Chicago, IL}{}{
 Offered freelance data analysis services to companies. Projects include building systems for automatic time-series analysis, data visualization and analysis, natural language processing analysis of surveys, and consulting on larger projects.
@@ -59,9 +59,9 @@ Offered freelance data analysis services to companies. Projects include building
 
 \section{Selected Projects}
 
-\cventry{2020 -}{\href{https://www.coeneedell.com/projects/memnet/}{Deep Learning and Computer Vision for Memorability}}{}{}{}{A project to create a better computer vision model for predicting the memorability of an image. This started with investigating the current standard MemNet, and has moved beyond into developing new models.}
+\cventry{2020 --}{\href{https://www.coeneedell.com/projects/memnet/}{Deep Learning and Computer Vision for Memorability}}{}{}{}{A project to create a better computer vision model for predicting the memorability of an image. This started with investigating the current standard MemNet, and has moved beyond into developing new models.}
 
-\cventry{2020 -}{\href{https://www.coeneedell.com/projects/computational_patahistory/}{Computational Rupahistory}}{}{}{}{An ongoing side project to see how agent based simulations of territory-controlling groups interact in a simulated world. Currently on the back-burner, though some progress has been made in creating a cellular automata to generate a world map on a hex-grid.}
+\cventry{2020 --}{\href{https://www.coeneedell.com/projects/computational_patahistory/}{Computational Rupahistory}}{}{}{}{An ongoing side project to see how agent based simulations of territory-controlling groups interact in a simulated world. Currently on the back-burner, though some progress has been made in creating a cellular automata to generate a world map on a hex-grid.}
 
 \cventry{2020}{\href{https://www.coeneedell.com/projects/bandcamp_analysis/}{Bandcamp Album Covers}}{}{}{}{A project to investigate how indie musicians use visual signs to indicate their subgenre. Leverages Natural Language Processing techniques like Latent Dirichlet Allocation to analyze color usage in album cover images.}
 
