--- a/static/files/cv.tex
+++ b/static/files/cv.tex
@@ -19,7 +19,7 @@
 \email{coen@needell.co}
 \social[github]{SoyBison}
 \social[linkedin]{coen-needell-b4503216a}
-\homepage{coen.needell.com}
+\homepage{coen.needell.co}
 \photo[104pt][0.4pt]{avatar}
 
 
@@ -72,7 +72,7 @@ Offered freelance data analysis services to companies. Projects include building
 \section{Conference Precedings}
 
 \cventry{}{Coen D. Needell, Wilma A. Bainbridge}{Embracing New Techniques in Deep Learning for Predicting
-Image Memorability}{}{Annual Meeting of the Vision Sciences Society, 2021}{Poster, Submitted}
+Image Memorability}{}{Annual Meeting of the Vision Sciences Society, 2021}{Poster}
 
 \section{Skills}
 \def\arraystretch{0}
