--- a/static/files/cv.tex
+++ b/static/files/cv.tex
@@ -14,13 +14,12 @@
 \usepackage{tabularx}
 %% Personal data
 \name{Coen}{D. Needell}
-\address{6120 S. Ellis Ave, 2 South}{60637 Chicago, IL} 
 \mobile{+1~(970)~456~2411}
 \email{coen@needell.co}
 \social[github]{SoyBison}
 \social[linkedin]{coen-needell-b4503216a}
 \homepage{coen.needell.co}
-\photo[104pt][0.4pt]{avatar}
+\photo[64pt][1pt]{avatar}
 
 
 %%------------------------------------------------------------------------------
@@ -30,14 +29,16 @@
 \begin{document}
 \makecvtitle
 \section{Education}
-\cventry{2019 -- 2021}{Master of Arts in Computational Social Science}{University of Chicago}{Chicago, IL}{\linebreak GPA: 3.83}{Thesis on Deep Learning and Human Memory. In Progress.}
+\cventry{2019 -- 2021}{Master of Arts in Computational Social Science}{University of Chicago}{Chicago, IL}{\linebreak GPA: 3.83}{Thesis on Deep Learning and Human Memory.}
 \cventry{2015 -- 2019}{Bachelor of Arts in Economics and Physics}{Washington University in St. Louis}{ St. Louis, MO}{\linebreak GPA: 3.41}{Minor in the Philosophy of Science}
 
 \section{Experience}
 
-\cventry{2020 -- 2021}{Research Assistant}{\href{https://brainbridgelab.uchicago.edu/}{University of Chicago: Brain Bridge Lab}}{Chicago, IL.}{}{Researched the efficacy of deep learning techniques to estimate the probability that a subject will remember an image. Used these models to create a better understanding of the features of an image that are common among highly memorable images. Future work may include working with novel deep learning methods.}
+\cventry{2021 -- 2022}{Research Assistant}{\href{https://www.microsoft.com/en-us/research/lab/microsoft-research-new-york/}{Microsoft Research Lab -- New York City}}{New York, NY}{}{Researched topics related to the News, such as how events are framed by different publishers, the length of the news cycle, and people's perceptions of factualness. Researched the process of conversion due to advertising.}
 
-\cventry{2020 -- 2021}{Research Assistant}{\href{https://voices.uchicago.edu/memorylab/}{University of Chicago: Memory Lab}}{Chicago, IL.}{}{Developed an online experiment to generate pilot data for the development of a computer assisted testing program for cognitive decline. Built in JSPsych and tested on prolific and a selection of older adults through a partnership with Rush University, the experiment is designed to see if sufficient information about one's cognitive state can be extracted with a minimal amount of memory and cognitive tests in a number of domains}
+\cventry{2020 -- 2021}{Research Assistant}{\href{https://brainbridgelab.uchicago.edu/}{University of Chicago: Brain Bridge Lab}}{Chicago, IL}{}{Researched the efficacy of deep learning techniques to estimate the probability that a subject will remember an image. Used these models to create a better understanding of the features of an image that are common among highly memorable images. Developed \textit{ResMem}, a novel deep-learning based model to estimate the memorability of images.}
+
+\cventry{2020 -- 2021}{Research Assistant}{\href{https://voices.uchicago.edu/memorylab/}{University of Chicago: Memory Lab}}{Chicago, IL}{}{Developed an online experiment to generate pilot data for the development of a computer assisted testing program for cognitive decline. Built in JSPsych and tested on prolific and a selection of older adults through a partnership with Rush University, the experiment is designed to see if sufficient information about one's cognitive state can be extracted with a minimal amount of memory and cognitive tests in a number of domains}
 
 \cventry{2019}{Freelance Data Scientist}{Upwork}{ St. Louis, MO and Chicago, IL}{}{
 Offered freelance data analysis services to companies. Projects include building systems for automatic time-series analysis, data visualization and analysis, natural language processing analysis of surveys, and consulting on larger projects.
@@ -59,20 +60,25 @@ Offered freelance data analysis services to companies. Projects include building
 
 \section{Selected Projects}
 
-\cventry{2020 --}{\href{https://www.coeneedell.com/projects/memnet/}{Deep Learning and Computer Vision for Memorability}}{}{}{}{A project to create a better computer vision model for predicting the memorability of an image. This started with investigating the current standard MemNet, and has moved beyond into developing new models.}
+\cventry{2020 -- 2021}{\href{https://www.coeneedell.com/project/memnet/}{Deep Learning and Computer Vision for Memorability}}{}{}{}{A project to create a better computer vision model for predicting the memorability of an image. This started with investigating the current standard MemNet, and has moved beyond into developing new models including the now completed \textit{ResMem}.}
 
-\cventry{2020 --}{\href{https://www.coeneedell.com/projects/computational_patahistory/}{Computational Rupahistory}}{}{}{}{An ongoing side project to see how agent based simulations of territory-controlling groups interact in a simulated world. Currently on the back-burner, though some progress has been made in creating a cellular automata to generate a world map on a hex-grid.}
+\cventry{2020 --}{\href{https://www.coeneedell.com/project/computational_patahistory/}{Computational Rupahistory}}{}{}{}{An ongoing side project to see how agent based simulations of territory-controlling groups interact in a simulated world. Currently on the back-burner, though some progress has been made in creating a cellular automata to generate a world map on a hex-grid.}
 
-\cventry{2020}{\href{https://www.coeneedell.com/projects/bandcamp_analysis/}{Bandcamp Album Covers}}{}{}{}{A project to investigate how indie musicians use visual signs to indicate their subgenre. Leverages Natural Language Processing techniques like Latent Dirichlet Allocation to analyze color usage in album cover images.}
+\cventry{2020}{\href{https://www.coeneedell.com/project/bandcamp_analysis/}{Bandcamp Album Covers}}{}{}{}{A project to investigate how indie musicians use visual signs to indicate their subgenre. Leverages Natural Language Processing techniques like Latent Dirichlet Allocation to analyze color usage in album cover images.}
 
-\cventry{2019 -- 2020}{\href{https://www.coeneedell.com/projects/ongaku/}{Ongaku}}{}{}{}{A system for creating musical playlists based on feature analysis. Leverages gammatone cepstral coefficients (a system for mimicking neural signals from the ear to the brain) and manifold learning techniques to create a psuedo-euclidean space for musical tracks. Shapes in the song-space can then be drawn to define playlists.}
+\cventry{2019 -- 2020}{\href{https://www.coeneedell.com/project/ongaku/}{Ongaku}}{}{}{}{A system for creating musical playlists based on feature analysis. Leverages gammatone cepstral coefficients (a system for mimicking neural signals from the ear to the brain) and manifold learning techniques to create a psuedo-euclidean space for musical tracks. Shapes in the song-space can then be drawn to define playlists.}
 
-\cventry{2019}{\href{https://www.coeneedell.com/projects/fluxx-for-robots/}{Fluxx for Robots}}{}{}{}{An Artifical Intelligence Learning environment for the tabletop card-game Fluxx by Looney Labs. Has both a human-motivated interface and a machine-motivated interface. Intended for research on machine learning methods for complex and incomplete-information games.}
+\cventry{2019}{\href{https://www.coeneedell.com/project/fluxx-for-robots/}{Fluxx for Robots}}{}{}{}{An Artifical Intelligence Learning environment for the tabletop card-game Fluxx by Looney Labs. Has both a human-motivated interface and a machine-motivated interface. Intended for research on machine learning methods for complex and incomplete-information games.}
 
-\section{Conference Precedings}
+\section{Publications}
 
-\cventry{}{Coen D. Needell, Wilma A. Bainbridge}{Embracing New Techniques in Deep Learning for Predicting
-Image Memorability}{}{Annual Meeting of the Vision Sciences Society, 2021}{Poster}
+\cventry{2021}{Embracing New Techniques in Deep Learning for Estimating 
+Image Memorability}{}{\linebreak Coen D. Needell, Wilma A. Bainbridge}{\textit{ArXiV.org}}{Preprint}
+
+\section{Conference Proceedings}
+
+\cventry{2021}{Embracing New Techniques in Deep Learning for Predicting
+Image Memorability}{}{\linebreak Coen D. Needell, Wilma A. Bainbridge}{\textit{Annual Meeting of the Vision Sciences Society}}{Poster}
 
 \section{Skills}
 \def\arraystretch{0}
@@ -94,7 +100,8 @@ Linux & Fortran & OpenCL \\
 Tensorflow & PyTorch & Sci-kit Learn \\
 Git & Numpy & Pandas \\
 R & Stata & Mathematica \\
-JSPsych & SQL & C-Family (esp. C99)
+JSPsych & SQL & C-Family (esp. C99) \\
+	D3.js & Matplotlib & ggplot2
 
 \end{tabularx}
 \end{document}
