added a href to embracing...

--- a/static/files/cv.tex
+++ b/static/files/cv.tex
@@ -29,7 +29,7 @@
 \begin{document}
 \makecvtitle
 \section{Education}
-\cventry{2019 -- 2021}{Master of Arts in Computational Social Science}{University of Chicago}{Chicago, IL}{\linebreak GPA: 3.83}{Thesis on Deep Learning and Human Memory.}
+\cventry{2019 -- 2021}{Master of Arts in Computational Social Science}{University of Chicago}{Chicago, IL}{\linebreak GPA: 3.80}{Thesis on Deep Learning and Human Memory.}
 \cventry{2015 -- 2019}{Bachelor of Arts in Economics and Physics}{Washington University in St. Louis}{ St. Louis, MO}{\linebreak GPA: 3.41}{Minor in the Philosophy of Science}
 
 \section{Experience}
@@ -72,8 +72,8 @@ Offered freelance data analysis services to companies. Projects include building
 
 \section{Publications}
 
-\cventry{2021}{Embracing New Techniques in Deep Learning for Estimating 
-Image Memorability}{}{\linebreak Coen D. Needell, Wilma A. Bainbridge}{\textit{ArXiV.org}}{Preprint}
+\cventry{2021}{\href{https://arxiv.org/abs/2105.10598}{Embracing New Techniques in Deep Learning for Estimating 
+Image Memorability}}{}{\linebreak Coen D. Needell, Wilma A. Bainbridge}{\textit{ArXiV.org}}{Preprint}
 
 \section{Conference Proceedings}
 
