--- a/static/files/cv.tex
+++ b/static/files/cv.tex
@@ -34,7 +34,7 @@
 
 \section{Experience}
 
-\cventry{2021 --}{Predoctoral Researcher}{\href{https://www.microsoft.com/en-us/research/lab/microsoft-research-new-york/}{Microsoft Research Lab -- New York City}}{New York, NY}{}{Researched topics related to the News, such as how events are framed by different publishers, the length of the news cycle, and people's perceptions of factualness. Researched the process of conversion due to advertising.}
+\cventry{2021 --}{Predoctoral Researcher}{\href{https://www.microsoft.com/en-us/research/lab/microsoft-research-new-york/}{Microsoft Research Lab -- New York City}}{New York, NY}{}{Researched topics related to the News, such as how events are framed by different publishers, the length of the news cycle, and people's perceptions of factualness. Researched the process of conversion due to advertising. Teaching assistant for the MSR NYC Data Science Summer School.}
 
 \cventry{2020 -- 2021}{Research Assistant}{\href{https://brainbridgelab.uchicago.edu/}{University of Chicago: Brain Bridge Lab}}{Chicago, IL}{}{Researched the efficacy of deep learning techniques to estimate the probability that a subject will remember an image. Used these models to create a better understanding of the features of an image that are common among highly memorable images. Developed \textit{ResMem}, a novel deep-learning based model to estimate the memorability of images.}
 
@@ -81,7 +81,7 @@ Offered freelance data analysis services to companies. Projects include building
 \section{Publications}
 
 \cventry{2021}{\href{https://arxiv.org/abs/2105.10598}{Embracing New Techniques in Deep Learning for Estimating 
-Image Memorability}}{}{\linebreak Coen D. Needell, Wilma A. Bainbridge}{\textit{ArXiV.org}}{Preprint}
+Image Memorability}}{}{\linebreak Coen D. Needell, Wilma A. Bainbridge}{\textit{Computational Brain \& Behavior}}{Forthcoming}
 
 \section{Talks}
 
