added some harder stuff to skills, NOTE REMEMBER TO RECOMPILE CV

--- a/static/files/cv.tex
+++ b/static/files/cv.tex
@@ -110,7 +110,7 @@ Epistemology & Sociology & Deep Learning
 \raggedleft
 \begin{tabularx}{.9\textwidth}{>{\center\arraybackslash}X >{\center\arraybackslash}X >{\center\arraybackslash}X}
 Python & JavaScript & Julia \\
-Linux & Fortran & OpenCL \\
+Linux & Rust & OpenCL \\
 Tensorflow & PyTorch & Sci-kit Learn \\
 Git & Numpy & Pandas \\
 R & Stata & Mathematica \\
