first post in years!!!

--- a/static/files/cv.tex
+++ b/static/files/cv.tex
@@ -15,10 +15,10 @@
 %% Personal data
 \name{Coen}{D. Needell}
 \mobile{+1~(970)~456~2411}
-\email{coen@needell.co}
+\email{coen@needell.org}
 \social[github]{SoyBison}
 \social[linkedin]{coen-needell-b4503216a}
-\homepage{coen.needell.co}
+\homepage{coen.needell.org}
 \photo[64pt][1pt]{avatar}
 
 
@@ -103,12 +103,11 @@ Image Memorability}}{}{\linebreak Coen D. Needell, Wilma A. Bainbridge}{\textit{
 \def\arraystretch{0}
 \raggedleft
 \begin{tabularx}{.9\textwidth}{>{\center\arraybackslash}X >{\center\arraybackslash}X >{\center\arraybackslash}X}
-Econometric Models & Systems Analysis & Advanced Mathematics \\
-Physics & Philosophy of Science & Data Visualization \\
-Machine Learning & Natural Language Processing & Data Mining \\
-Data Scraping & Network Analysis & Statistics and Statistical Learning \\
-Epistemology & Sociology & Deep Learning \\
-	Web Development & Unix & Cloud Computing
+	Machine Learning & Natural Language Processing & Data Mining \\
+	Network Analysis & Statistics and Statistical Learning & Deep Learning \\
+	Cloud Computing & Web Development & Unix \\
+	Data Visualization & Data Scraping & Philosophy of Science \\
+	Econometric Models & Systems Analysis & Advanced Mathematics
 \end{tabularx}
 
 \section{Languages, Packages, and Frameworks}
@@ -116,11 +115,11 @@ Epistemology & Sociology & Deep Learning \\
 \raggedleft
 \begin{tabularx}{.9\textwidth}{>{\center\arraybackslash}X >{\center\arraybackslash}X >{\center\arraybackslash}X}
 Python & JavaScript & Julia \\
-Linux & Rust & OpenCL \\
-Tensorflow & PyTorch & Sci-kit Learn \\
-SciPy & Numpy & Pandas \\
 R & Stata & Mathematica \\
-	D3.js & MatPlotLib & ggplot2
+NLTK & PyTorch & Sci-kit Learn \\
+SciPy & Numpy & Pandas \\
+D3.js & MatPlotLib & ggplot2 \\
+Linux & Rust & OpenCL \\
 
 \end{tabularx}
 \end{document}
