--- a/static/files/cv.tex
+++ b/static/files/cv.tex
@@ -34,13 +34,15 @@
 
 \section{Experience}
 
-\cventry{2022 --}{Predoctoral Researcher}{\href{https://css.seas.upenn.edu/}{Computational Social Science, University of Pennsylvania}}{Philadelphia, PA}{}{Researched topics relating to the News, especially how the apparent "Speed of News" has been increasing. Developed the \textit{Living Journal}, a system for publishing live updating dashboards associated with papers, blog posts using a novel statistical and visualization package, and interactive papers. Developed the \textit{News Observatory}, a system for monitoring news websites and collecting analyzable data about their publication behavior.}
+\cventry{2023 --}{Freelance Researcher}{University of Chicago, Department of Psychology}{Chicago, IL}{}{Built apparatus for data gathering on older adults and people with mild cognitive impairments with David Gallo. Developing a novel approach for estimating auditory memorability with Wilma A. Bainbridge.}
+
+\cventry{2022 --}{Predoctoral Researcher}{\href{https://css.seas.upenn.edu/}{Computational Social Science, University of Pennsylvania}}{Philadelphia, PA}{}{Researched topics relating to the News, especially how the apparent "Speed of News" has been increasing. Developed the \textit{Living Journal Toolkit}, a collection of tools for publishing live updating dashboards associated with papers, blog posts using a novel statistical and visualization package, and interactive papers. Developed the \textit{News Observatory}, a system for monitoring news websites and collecting analyzable data about their publication behavior.}
 
 \cventry{2021 -- 2022}{Predoctoral Researcher}{\href{https://www.microsoft.com/en-us/research/lab/microsoft-research-new-york/}{Microsoft Research Lab -- New York City}}{New York, NY}{}{Researched topics related to the News, such as how events are framed by different publishers, the length of the news cycle, and people's perceptions of factualness. Researched the process of conversion due to advertising. Teaching assistant for the MSR NYC Data Science Summer School.}
 
-\cventry{2020 -- 2021}{Research Assistant}{\href{https://brainbridgelab.uchicago.edu/}{University of Chicago: Brain Bridge Lab}}{Chicago, IL}{}{Researched the efficacy of deep learning techniques to estimate the probability that a subject will remember an image. Used these models to create a better understanding of the features of an image that are common among highly memorable images. Developed \textit{ResMem}, a novel deep-learning based model to estimate the memorability of images.}
+\cventry{2020 -- 2021}{Research Assistant}{\href{https://brainbridgelab.uchicago.edu/}{University of Chicago: Brain Bridge Lab}}{Chicago, IL}{}{Researched the efficacy of deep learning techniques to estimate the probability that a subject will remember an image. Used these models to create a better understanding of the features of an image that are common among highly memorable images. Developed \textit{ResMem}, a novel deep-learning based model to estimate the memorability of images. With Prof. Wilma A. Bainbridge.}
 
-\cventry{2020 -- 2021}{Research Assistant}{\href{https://voices.uchicago.edu/memorylab/}{University of Chicago: Memory Lab}}{Chicago, IL}{}{Developed an online experiment to generate pilot data for the development of a computer assisted testing program for cognitive decline. Built in JSPsych and tested on prolific and a selection of older adults through a partnership with Rush University, the experiment is designed to see if sufficient information about one's cognitive state can be extracted with a minimal amount of memory and cognitive tests in a number of domains}
+\cventry{2020 -- 2021}{Research Assistant}{\href{https://voices.uchicago.edu/memorylab/}{University of Chicago: Memory Lab}}{Chicago, IL}{}{Developed an online experiment to generate pilot data for the development of a computer assisted testing program for cognitive decline. Built in JSPsych and tested on prolific and a selection of older adults through a partnership with Rush University, the experiment is designed to see if sufficient information about one's cognitive state can be extracted with a minimal amount of memory and cognitive tests in a number of domains. With Prof. David Gallo.}
 
 \cventry{2019}{Freelance Data Scientist}{Upwork}{ St. Louis, MO and Chicago, IL}{}{Offered freelance data analysis services to companies. Projects include building systems for automatic time-series analysis, data visualization and analysis, natural language processing analysis of surveys, and consulting on larger projects.
 \textbf{Jobs Include:}
@@ -57,9 +59,9 @@
 
 \cventry{2016 -- 2017}{Economics Simulation Programmer}{Washington University in St. Louis: Department of Economics}{\linebreak St. Louis, MO}{}{Built macroeconomic simulations for teaching of Economics 4121. Wrote simulations in Mathematica for the ISLMFE model, the Solow-Swan model, and permutations thereof.}
 
-\pagebreak
-
 \section{Selected Projects}
+
+\cventry{2023 -- }{ResMemVox}{}{}{}{Using deep learning techniques to estimate the memorability of audio snippets.}
 
 \cventry{2022 -- }{News Observatory}{}{}{}{Using cloud computing, optical character recognition, networking techniques, and other mixed methods to create an ongoing dataset of news website publications.}
 
@@ -85,14 +87,20 @@
 
 \section{Publications}
 
-\cventry{2022}{Search Conversion Journeys and Efficient Advertising Opportunities}{}{\linebreak Coen D. Needell, David Rothschild}{\textit{Marketing Science}}{Submitted}
+\cventry{2023}{Mainstream Media Producing and Distributing Misinformation Through Stenography and ``Opinions''}{}{\linebreak David Rothschild, Elliot E. Pickens, Tin Orešković, Katelyn Morrison, Markus Mobius, Coen D. Needell, Jared Katzman, Duncan J. Watts}{}{Forthcoming}
 
-\cventry{2021}{\href{https://doi.org/10.1007/s42113-022-00126-5}{Embracing New Techniques in Deep Learning for Estimating 
+\cventry{2023}{Modeling Framing in News Coverage about the U.S. Economy}{}{\linebreak Maria Leonor Pacheco, Coen D. Needell, Elliot E. Pickens, David Rothschild}{}{Forthcoming}
+
+\cventry{2023}{The News Observatory: A collection and Storage System for Past and Future News Media Content}{}{\linebreak Coen D. Needell, Elliot E. Pickens, David Rothschild}{}{Forthcoming}
+
+\cventry{2023}{Search Conversion Journeys and Efficient Advertising Opportunities}{}{\linebreak Coen D. Needell, David Rothschild}{\textit{Marketing Science}}{Submitted}
+
+\cventry{2021}{\href{https://doi.org/10.1007/s42113-022-00126-5}{Embracing New Techniques in Deep Learning for Estimating
 Image Memorability}}{}{\linebreak Coen D. Needell, Wilma A. Bainbridge}{\textit{Computational Brain \& Behavior}}{Published}
 
-\section{Talks}
+\section{Presentations}
 
-\cventry{2022}{Side-Loading: analogous problems and interdisciplinary applications of machine learning}{}{\linebreak Coen D. Needell}{\textit{BLRB Cluster Fall Series Talks}}{Invited Talk}
+\cventry{2023}{The News Observatory: A collection and Storage System for Past and Future News Media Content}{}{\linebreak Coen D. Needell, Elliot E. Pickens, David Rothschild, Duncan J. Watts}{\textit{International Conference on Computational Social Science}}{Poster}
 
 \cventry{2021}{Memorability: A Stimulus-Centric Framework for Analyzing Memory Performance}{}{\linebreak Wilma A. Bainbridge, Paige Hanson, Max Kramer, Coen D. Needell, Xinyue Li}{\textit{Interdisciplinary Graduate Conference, UChicago}}{Panel}
 
