--- a/static/files/cv.tex
+++ b/static/files/cv.tex
@@ -34,7 +34,7 @@
 
 \section{Experience}
 
-\cventry{2023 --}{Freelance Researcher}{University of Chicago, Department of Psychology}{Chicago, IL}{}{Built apparatus for data gathering on older adults and people with mild cognitive impairments with David Gallo. Developing a novel approach for estimating auditory memorability with Wilma A. Bainbridge.}
+\cventry{2023 --}{Freelance Researcher}{University of Chicago, Department of Psychology}{Chicago, IL}{}{Built apparatus for data gathering on older adults and people with mild cognitive impairments with David Gallo. Developing a novel approach using deep learning for estimating auditory memorability with Wilma A. Bainbridge. }
 
 \cventry{2022 --}{Predoctoral Researcher}{\href{https://css.seas.upenn.edu/}{Computational Social Science, University of Pennsylvania}}{Philadelphia, PA}{}{Researched topics relating to the News, especially how the apparent "Speed of News" has been increasing. Developed the \textit{Living Journal Toolkit}, a collection of tools for publishing live updating dashboards associated with papers, blog posts using a novel statistical and visualization package, and interactive papers. Developed the \textit{News Observatory}, a system for monitoring news websites and collecting analyzable data about their publication behavior.}
 
@@ -128,6 +128,7 @@ NLTK & PyTorch & Sci-kit Learn \\
 SciPy & Numpy & Pandas \\
 D3.js & MatPlotLib & ggplot2 \\
 Linux & Rust & OpenCL \\
+  SQL & AWS & Kubernetes \\
 
 \end{tabularx}
 \end{document}
