--- a/static/files/resume_de.tex
+++ b/static/files/resume_de.tex
@@ -87,6 +87,7 @@ NLTK & PyTorch & Sci-kit Learn \\
 SciPy & Numpy & Pandas \\
 D3.js & MatPlotLib & ggplot2 \\
 Linux & Rust & Haskell \\
+  SQL & AWS & Kubernetes \\
 
 \end{tabularx}
 \end{document}
